@@ -5,6 +5,8 @@
 - fix negative caching for non-existent map keys.
 - use CLOEXEC flag.
 - fix select(2) fd limit.
+- make hash table scale to thousands of entries (Paul Wankadia,
+  Valerie Aurora Henson).
 
 4/11/2008 autofs-5.0.4
 -----------------------
